--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,37 +1,69 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 #home {
-  header {
-    padding: 24px;
-    border-bottom: 1px solid #e2e2e2;
-    display: flex;
-    position: relative;
-
-    .content {
-      max-width: 1120px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      > img {
-        max-height: 45px;
-        position: absolute;
-        left: auto;
-      }
-    }
-
-    .items {
-      ul {
-        display: flex;
-        padding: 0;
-      }
-      li {
-        padding: 0px 10px 0px;
-        list-style-type: none;
-      }
-
-    }
-
-
+  #profile-photo {
+    height: 250px;
+    width: auto;
+    max-width: 100%;
+    border-radius: 50%;
   }
 
+  .jumbotron {
+    margin-bottom: 0px !important;
+    height: 100% !important;
+  }
+  p {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
+  .social-icons {
+    margin-top: 10px;
+
+    a {
+      padding-left: 10px;
+    }
+  }
+
+  .footer {
+    background-color: #343a40;
+    position: bottom;
+    margin: 0px;
+    margin-top: 0px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+  #footerText {
+    color: #ccc;
+    align-content: center;
+  }
+  .display-4 {
+    font-size: 2.5rem !important;
+  }
+  .projecttitle {
+    text-align: center;
+  }
+  section.projects {
+    background-color: #f1f5f8;
+    padding-top: 0px;
+    margin-bottom: initial;
+  }
+
+  .color {
+    background-color: #f1f5f8 !important;
+  }
+
+  section.profile {
+    padding: 10%;
+  }
+
+  .box {
+    padding-top: 150px !important;
+  }
+
+  section img {
+    object-fit: cover;
+  }
 }
