--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,11 +1,7 @@
 footer {
-  background-color: #343a40;
-  position: bottom;
-  margin: 0px;
-  margin-top: 0px;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  background-color: #E9ECEF;
   text-align: center;
+  bottom: 0;
 
   > p {
     color: #ccc;
