--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -3,9 +3,13 @@
   padding: 0;
 }
 
-.projects {
-  background: #F1F5F8;
+body {
+  height: 100%;
+  min-height: 100%;
+}
 
+.projects {
+  background: #E9ECEF;
   h2 {
     font-size: 40px;
     margin-top: 50px;
